--- a/config.yaml
+++ b/config.yaml
@@ -56,6 +56,9 @@ accounts:
     - name: "UPI Transfer"
       account: "Income:UPITransfer"
       description: "Money received via UPI from others"
+    - name: "IMPS Transfer"
+      account: "Income:IMPSTransfer"
+      description: "Money received via IMPS from others"
     - name: "Refund or Reimbursement"
       account: "Income:RefundOrReimbursement"
       description: "Reimbursements, cashback, or refunds"
